localstorage104-105 data-set ul li

--- a/27-82caculate/27-32_calculation.html
+++ b/27-82caculate/27-32_calculation.html
@@ -13,6 +13,6 @@
         <p>給我</p> <input type="text" id="hamNumId">個漢堡 再給我<input type="text" id="cokeNumId">杯可樂吧
         服務生:<button id="countId">計算中</button>好的，總計是<em id="totalId" class="tag"></em>元
     </div>
-    <script src="./32-41_ojbect_array.js"></script>
+    <script src="./27-32_calculation.js"></script>
 </body>
 </html>
